2012-02-04  Philip Rogers  <pdr@google.com>

        Fix bug in svg-link-hover-use.svg
        https://bugs.webkit.org/show_bug.cgi?id=77768

        Reviewed by Eric Seidel.

        * ManualTests/svg-link-hover-use.svg:

2012-02-04  Kalev Lember  <kalevlember@gmail.com>

        [GTK] Use the wide character version of win32 API by default
        https://bugs.webkit.org/show_bug.cgi?id=77809

        Reviewed by Martin Robinson.

        Certain win32-specific files (like PluginDatabaseWin.cpp) make the
        assumption that the wide character version of win32 API is the default.
        Define _UNICODE and UNICODE to do this, similar to what other win32
        ports are doing.

        * GNUmakefile.am:

2012-02-03  Kalev Lember  <kalevlember@gmail.com>

        [GTK] configure: Print out the -Wno-c++0x-compat test result
        https://bugs.webkit.org/show_bug.cgi?id=77757

        Reviewed by Martin Robinson.

        The check whether -Wno-c++0x-compat flag is needed didn't print out
        the test result (and newline), which caused the following test to be
        displayed on the same line.

        checking if we have to disable C++0x compat warnings for GCC >= 4.6.0... checking pthread.h usability... yes

        * configure.ac:

2012-02-03  Ryosuke Niwa  <rniwa@webkit.org>

        perf-o-matic should store chromium svn revision
        https://bugs.webkit.org/show_bug.cgi?id=77725

        Reviewed by Dirk Pranke.

        Store both WebKit and Chromium revisions when both are reported.

        * Websites/webkit-perf.appspot.com/models.py:
        (Build):
        * Websites/webkit-perf.appspot.com/report_handler.py:
        (ReportHandler.post):
        (ReportHandler._create_build_if_possible):
        (ReportHandler._create_build_if_possible.execute):
        * Websites/webkit-perf.appspot.com/static/manual-submit.html:

2012-02-03  Simon Hausmann  <simon.hausmann@nokia.com>
